# fastVEP

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  setup.sh
.github/workflows/: ci.yml
analysis/acmg_benchmark/real_data/: .gitignore  01_extract_clinvar_2star.py  02_run_classifier.sh  03_evaluate_concordance.py  04_build_md_review_table.py  README.md  generate_figures.py
analysis/acmg_benchmark/real_data/output_chr17/: concordance_by_consequence.csv  concordance_matrix.csv  (+2 more)
api/: .dockerignore  Dockerfile  README.md  main.py  models.py  requirements.txt  vcf_builder.py
api/tests/: test_main.py  test_models.py  test_vcf_builder.py
crates/fastvep-annotate/: Cargo.toml
crates/fastvep-annotate/src/: lib.rs
crates/fastvep-classification/src/: lib.rs
crates/fastvep-cli/src/: pipeline.rs
crates/fastvep-cli/tests/: sa_build_oga.rs
crates/fastvep-io/src/: output.rs
crates/fastvep-sa/src/: block.rs  bloom.rs  chunk.rs  common.rs  fields.rs  gene.rs  index.rs  interval.rs  kmer16.rs  reader.rs  reader_v2.rs  var32.rs
data/benchmark/: RUN_VERSIONS.md  run_full_benchmark.sh
data/benchmark/output_v1/: README.md
data/benchmark/output_v7/: README.md  concordance_by_chrom.csv  concordance_by_consequence.csv  concordance_matrix.csv  concordance_summary.txt  criterion_firing_rates.csv  discrepancies.tsv  rule_distribution.csv
docs/superpowers/plans/: 2026-05-02-vcf-supplementary-annotations.md
docs/superpowers/specs/: 2026-05-02-vcf-supplementary-annotations-design.md
scripts/: deploy-clinical.sh  deploy-full.sh  deploy-minimal.sh
(+11 files in other folders)
